# CLoud

./: !GenerateProject.bat  .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  LICENSE  README.md  premake5.lua
CLoud/include/gx/: matrix.h
CLoud/src/: main.c  main.cpp  matrix.c  test.c
depend/glad/: CMakeLists.txt
depend/glad/Debug/: glad.lib
depend/glad/glad.dir/Debug/: glad.lib.recipe
depend/glad/glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glad.lastbuildstate
depend/glad/include/glad/: gl.h
src/: CMakeLists.txt  main.c
src/CLoud.dir/Debug/CLoud.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
